# EDA2

./: CMakeLists.txt  README.md  main.c  menu.c
resources/: InfUsuarios.txt  InformacionUsuarios  check.csv  usuarios.csv  usuarios.txt
sources/headers/: dictionary_words.h  document r.h  documento 2.h  funciones submenu.h  funciones_menu.h  main+menu.h  main.h  menu.h  merge_users.h  posts.h  stack_strangers.h  user_linked.h  usuario.h  usuarios.h
sources/src/: document r.c  documento 2.c  el definitivo.c  funciones submenu.c  funciones_menu.c  main.c  menu.c  user_linked.c  usuario.c
sources/srcs/: dictionary_words.c  main+menu.c  merge_users.c  posts.c  stack_strangers.c  usuarios.c
